<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/uploadFragment"
    android:paddingTop="40dp"
    android:background="@drawable/custom_gradient"
    tools:context=".ui.main.UploadFragment">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="18dp"
        android:background="@null"
        android:contentDescription="@string/txt_close_upload_page"
        android:src="@drawable/ic_close_24px"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/story_image"
        android:layout_above="@+id/get_location_switch"
        android:layout_below="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="24dp"
        android:contentDescription="@string/txt_story_image"
        android:scaleType="fitCenter"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/get_location_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_upload"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_location"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/container_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="24dp"
        android:paddingBottom="24dp"
        android:orientation="horizontal">

        <com.submis.ourstory.ui.custom.TextFieldClear
            android:id="@+id/ed_add_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/txt_add_description"
            android:imeOptions="actionNext"
            android:padding="12dp"
            android:drawableTint="@color/primary_light"
            app:drawableStart="@drawable/ic_description_24px"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <ImageButton
            android:id="@+id/btn_upload_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:contentDescription="@string/txt_upload_btn_desc"
            android:src="@drawable/ic_send_34px"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:visibility="gone"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/lottie_animation"
        android:transitionName="lottie"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_animation"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>