<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_gradient"
    tools:context=".ui.main.LoginFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/lottie_animation"
            android:transitionName="lottie"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/splashscreen_animation"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/label_appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textColor="@color/accent_secondary"
            android:textSize="25sp"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="24dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/label_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.submis.ourstory.ui.custom.TextFieldClear
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:hint="@string/txt_name"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            app:drawableStart="@drawable/ic_person_24px"
            android:drawableTint="@color/primary_light"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <com.submis.ourstory.ui.custom.TextFieldEmail
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/txt_email_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <com.submis.ourstory.ui.custom.TextFieldPassword
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/txt_password_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_action_button"
            android:text="@string/txt_register"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:transitionName="action"
            app:backgroundTint="@null"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerMisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:transitionName="misc">

        <TextView
            android:id="@+id/label_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sign_in_offer"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/txt_sign_in"
            android:textColor="@color/accent_secondary"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <include
        android:visibility="gone"
        android:id="@+id/loading"
        layout="@layout/custom_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>