<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_gradient">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="32dp"
        app:title="@string/txt_settings"/>

    <LinearLayout
        android:layout_below="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp">

        <RelativeLayout
            android:id="@+id/btn_location_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp"
            android:background="@drawable/custom_button">
            <ImageView
                android:id="@+id/icon_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_location"
                android:src="@drawable/ic_location_24px"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/icon_location"
                android:text="@string/txt_location_request"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_language_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="18dp"
            android:background="@drawable/custom_button">
            <ImageView
                android:id="@+id/icon_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_language"
                android:src="@drawable/ic_language_24px"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/icon_language"
                android:text="@string/txt_language"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_aboutdev_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:padding="18dp"
            android:background="@drawable/custom_button">
            <ImageView
                android:id="@+id/icon_aboutdev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_aboutdev"
                android:src="@drawable/ic_person_raised_hand_24px"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_toEndOf="@id/icon_aboutdev"
                android:text="@string/txt_aboutdev"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/error"
            android:text="@string/txt_sign_out"/>

    </LinearLayout>

</RelativeLayout>