<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cameraFragment"
    tools:context=".ui.main.CameraFragment">

    <RelativeLayout
        android:id="@+id/container_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_container"
        android:paddingTop="32dp">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:contentDescription="@string/txt_close_camera"
            android:src="@drawable/ic_close_24px"
            tools:ignore="TouchTargetSizeCheck" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_middle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/container_top"
        android:orientation="vertical">

        <androidx.camera.view.PreviewView
            android:id="@+id/view_finder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <RelativeLayout
            android:id="@+id/container_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="28dp"
            android:background="@drawable/custom_container">

            <ImageButton
                android:id="@+id/btn_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                app:tint="@color/white"
                android:contentDescription="@string/txt_take_a_photo"
                app:srcCompat="@drawable/ic_shutter_48px"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/btn_switch_camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="32dp"
                android:background="@null"
                android:contentDescription="@string/txt_switch_camera"
                android:src="@drawable/ic_cameraswitch_24px"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/btn_open_gallery"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="32dp"
                android:background="@null"
                android:contentDescription="@string/txt_pick_gallery"
                android:src="@drawable/ic_gallery_24px"
                app:tint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>